# budbroker_soil_iot

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/ble/: CMakeLists.txt  bluetooth.c
components/bmx280/: CMakeLists.txt  LICENSE.MD
components/bud_ble/: CMakeLists.txt  bluetooth.c  bluetooth.h
components/data/: flash_storage.c  flash_storage.h
components/grow/: CMakeLists.txt  grow.c  grow.h
components/i2c_sensors/: CMakeLists.txt  i2c_sensors.c  i2c_sensors.h
components/utils/: CMakeLists.txt  networking.c  networking.h
components/wifi/: CMakeLists.txt  wifi.c
main/: CMakeLists.txt  main.c
main/ble/: CMakeLists.txt  bluetooth.h
main/data/: CMakeLists.txt  flash.h  flash_storage.c  flash_storage.h
main/utils/: CMakeLists.txt  MAX44009.c  MAX44009.h  environmentals.c  environmentals.h  networking.c  networking.h
main/wifi/: CMakeLists.txt  wifi.c  wifi.h
