idf_component_register(SRCS "main.c" "utils/environmentals.c" "utils/networking.c" "ble/bluetooth.c" "data/flash_storage.c" "utils/MAX44009.c" INCLUDE_DIRS ".")
add_library(environmentals utils/environmentals.c)
add_library(networking utils/networking.c)
add_library(MAX44009 utils/MAX44009.c)
add_library(bluetooth ble/bluetooth.c)
add_library(data data/flash_storage.c)